Provision_scripts/Template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "sshPublicKey": {
            "type": "String",
            "metadata": {
                "description": "path to SSH public key"
            }
        },
        "CustomData-WebApp": {
            "type": "string",
            "metadata": {
                "description": "path to script for web app"
            }
        },
        "CustomData-ReversedProxy": {
            "type": "string",
            "metadata": {
                "description": "path to script for reversed proxy"
            }
        }
    },
    "variables": {},
    "functions": [],
    "resources": [
        //Storage Account
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-04-01",
            "name": "[concat(resourceGroup().name, 'kevfun0922')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "StorageV2",
            "properties": {
                "allowBlobPublicAccess": true
            }
        },
        //Storage Account Container
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "apiVersion": "2023-04-01",
            "name": "[concat(resourceGroup().name, 'kevfun0922', '/default/', 'container', uniqueString(resourceGroup().id))]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', concat(resourceGroup().name, 'kevfun0922'))]"
            ],
            "properties": {
                "publicAccess": "Blob"
            }
        },
        //Virtual Network and Subnet
        {
            "type": "Microsoft.Network/virtualnetworks",
            "apiVersion": "2023-11-01",
            "name": "AlmightyNetwork",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "AlmightySubnet",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            }
        },
        //Reversed Proxy PublicIP
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-11-01",
            "name": "ReversedProxy-PublicIP",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        //Reversed Proxy ASG
        {
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2023-11-01",
            "name": "ReversedProxy-ASG",
            "location": "[resourceGroup().location]",
            "properties": {}
        },
        //Reversed Proxy NSG
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-11-01",
            "name": "ReversedProxy-NSG",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups','BastionHost-ASG')]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups','ReversedProxy-ASG')]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": "300",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "80",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "Allow-SSH-From-Bastion",
                        "properties": {
                            "priority": "100",
                            "direction": "Inbound",
                            "access": "Allow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceApplicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','BastionHost-ASG')]"
                                }
                            ],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','ReversedProxy-ASG')]"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        //Reversed Proxy NIC
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-11-01",
            "name": "ReversedProxy-NIC",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualnetworks','AlmightyNetwork')]",
                "[resourceId('Microsoft.Network/publicIPAddresses','ReversedProxy-PublicIP')]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups','ReversedProxy-ASG')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups','ReversedProxy-NSG')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ReversedProxy-IPConfig",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets','AlmightyNetwork','AlmightySubnet')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses','ReversedProxy-PublicIP')]"
                            },
                            "applicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','ReversedProxy-ASG')]"
                                }
                            ]
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups','ReversedProxy-NSG')]"
                }
            }
        },
        //Reversed Proxy VM
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "name": "ReversedProxy-VM",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces','ReversedProxy-NIC')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "ReversedProxy",
                    "adminUsername": "azureuser",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/azureuser/.ssh/authorized_keys",
                                    "keyData": "[parameters('sshPublicKey')]"
                                }
                            ]
                        }
                    },
                    "customData": "[base64(parameters('CustomData-ReversedProxy'))]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "ReversedProxy-OSDisk",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces','ReversedProxy-NIC')]"
                        }
                    ]
                }
            }
        },
        //Bastion Host PublicIP
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-11-01",
            "name": "BastionHost-PublicIP",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        //Bastion Host ASG
        {
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2023-11-01",
            "name": "BastionHost-ASG",
            "location": "[resourceGroup().location]",
            "properties": {}
        },
        //Bastion Host NSG
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-11-01",
            "name": "BastionHost-NSG",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": "300",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "22",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        //Bastion Host NIC
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-11-01",
            "name": "BastionHost-NIC",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualnetworks','AlmightyNetwork')]",
                "[resourceId('Microsoft.Network/publicIPAddresses','BastionHost-PublicIP')]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups','BastionHost-ASG')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups','BastionHost-NSG')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ReversedProxy-IPConfig",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets','AlmightyNetwork','AlmightySubnet')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses','BastionHost-PublicIP')]"
                            },
                            "applicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','BastionHost-ASG')]"
                                }
                            ]
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups','BastionHost-NSG')]"
                }
            }
        },
        //Bastion Host VM
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "name": "BastionHost-VM",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces','BastionHost-NIC')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "BastionHost",
                    "adminUsername": "azureuser",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/azureuser/.ssh/authorized_keys",
                                    "keyData": "[parameters('sshPublicKey')]"
                                }
                            ]
                        }
                    }
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "BastionHost-OSDisk",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', 'BastionHost-NIC')]"
                        }
                    ]
                }
            }
        },
        //Web App ASG
        {
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2023-11-01",
            "name": "WebApp-ASG",
            "location": "[resourceGroup().location]",
            "properties": {}
        },
        //Web App NSG
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-11-01",
            "name": "WebApp-NSG",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups','BastionHost-ASG')]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups','WebApp-ASG')]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow-SSH-From-Bastion",
                        "properties": {
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": "110",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceApplicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','BastionHost-ASG')]"
                                }
                            ],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','WebApp-ASG')]"
                                }
                            ]
                        }
                    },
                    {
                        "name": "Allow-HTTP-From-ReversedProxy",
                        "properties": {
                            "access": "Allow",
                            "direction": "Inbound",
                            "priority": "100",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5000",
                            "sourceApplicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','ReversedProxy-ASG')]"
                                }
                            ],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','WebApp-ASG')]"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        //Web App NIC
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-11-01",
            "name": "WebApp-NIC",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualnetworks','AlmightyNetwork')]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups','WebApp-ASG')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups','WebApp-NSG')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "WebApp-IPConfig",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "10.0.0.100",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets','AlmightyNetwork','AlmightySubnet')]"
                            },
                            "applicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups','WebApp-ASG')]"
                                }
                            ]
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups','WebApp-NSG')]"
                }
            }
        },
        //Web App VM
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "name": "WebApp-VM",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces','WebApp-NIC')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "WebApp",
                    "adminUsername": "azureuser",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/azureuser/.ssh/authorized_keys",
                                    "keyData": "[parameters('sshPublicKey')]"
                                }
                            ]
                        }
                    },
                    "customData": "[base64(parameters('CustomData-WebApp'))]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-jammy",
                        "sku": "22_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "WebApp-OSDisk",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', 'WebApp-NIC')]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
